--- a/index.html
+++ b/index.html
@@ -72,6 +72,6 @@
             </section>
         </div>
     </main>
-    <script src="/assets/js/script.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
