--- a/index.html
+++ b/index.html
@@ -72,6 +72,6 @@
             </section>
         </div>
     </main>
-    <script src="./assets/js/script.js" type="text/javascript"></script>
+    <script src="https://github.com/gj3chavez/Code-Quiz/assets/js/script.js" type="text/javascript"></script>
 </body>
 </html>
