--- a/index.html
+++ b/index.html
@@ -72,6 +72,6 @@
             </section>
         </div>
     </main>
-    <script src="./assets/js/Script.js" type="text/javascript"></script>
+    <script src="assets/js/Script.js" type="text/javascript"></script>
 </body>
 </html>
