--- a/index.html
+++ b/index.html
@@ -21,9 +21,12 @@
         <div>
             <section id="introSection" class="intro-section">
                 <div id="quiz">
-                    <h1>Coding Quiz Challenge</h1>
+                    <h1>Coding Quiz </h1>
+                    <h3>Powered by JavaScript</h3>
                     <p id="instructions">
-                    Try to answer the following code-related questions within the time limit. Keep in mind that incorrect asnwers will penalize your score by ten seconds!
+                    Try to answer the following code-related questions within 
+                    the time limit. Keep in mind that incorrect asnwers will 
+                    penalize your score by ten seconds!
                     </p>
                     <button class="button" id="startBtn">Start Quiz</button>
                 </div>
